fix: .css модули + убрал overflow-x списка команд

--- a/src/widgets/MainPageTeamList/TeamList.module.css
+++ b/src/widgets/MainPageTeamList/TeamList.module.css
@@ -10,7 +10,7 @@
     margin: 5px 0px;
 
     font-size: 15px;
-
+    overflow-x: hidden;
     overflow-y: scroll;
 }
 .container {
